--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,15 +5,34 @@ on:
   push:
     branches:
       - 'main'
+  workflow_dispatch:
+    inputs:
+      # Working directory input from user.
+      resource:
+        type: choice
+        description: Choose the resource
+        options:
+        - name_of_dir1
+        - name_of_dir2
+      # Terraform action you want to perform
+      action:
+        description: 'Terraform Action to Perform'
+        type: choice
+        options:
+        - Terraform_apply
+        - Terraform_destroy
+
   
 env:
   AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
 jobs:
-  build-infra:
-    name: terraform-ci-cd
+  terraform-apply:
+    name: terraform-apply
+    if: ${{ github.event.inputs.action == 'terraform-apply' }}
     runs-on: ubuntu-latest
+    
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -35,3 +54,31 @@ jobs:
         id: apply
         run: terraform destroy --auto-approve
         working-directory: .
+
+  terraform-destroy:
+    name: terraform-destroy
+    if: ${{ github.event.inputs.action == 'terraform-destroy' }}
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v2
+      - name: Terraform Init
+        id: init
+        run: terraform init
+        working-directory: .
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate
+        working-directory: .
+      - name: Terraform Plan
+        id: plan
+        run: terraform plan
+        working-directory: .
+      - name: Terraform Apply
+        id: apply
+        run: terraform destroy --auto-approve
+        working-directory: .
+        
