--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,20 +7,20 @@ on:
     #   - 'main'
   workflow_dispatch:
     inputs:
-      # Working directory input from user.
-      resource:
-        type: choice
-        description: Choose the resource
-        options:
-        - name_of_dir1
-        - name_of_dir2
+      # # Working directory input from user.
+      # resource:
+      #   type: choice
+      #   description: Choose the resource
+      #   options:
+      #   - name_of_dir1
+      #   - name_of_dir2
       # Terraform action you want to perform
       action:
         description: 'Terraform Action to Perform'
         type: choice
         options:
-        - Terraform_apply
-        - Terraform_destroy
+        - terraform-apply
+        - terraform-destroy
 
   
 env:
