--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -31,11 +31,11 @@ jobs:
         with:
           sarif_file: tfsec.sarif
 
-      - name: Upload SARIF file
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          # Path to SARIF file relative to the root of the repository
-          sarif_file: tfsec.sarif
+      # - name: Upload SARIF file
+      #   uses: github/codeql-action/upload-sarif@v2
+      #   with:
+      #     # Path to SARIF file relative to the root of the repository
+      #     sarif_file: tfsec.sarif
 
       - name: Upload SARIF Report
         uses: actions/upload-artifact@v2
