--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -25,20 +25,22 @@ jobs:
     steps:
       - name: Clone repo
         uses: actions/checkout@v3
+      - name: Run Tfsec
+        uses: aquasecurity/tfsec-action@v1.0.0
 
-      - name: Run tfsec
-        uses: aquasecurity/tfsec-sarif-action@9a83b5c3524f825c020e356335855741fd02745f
-        with:
-          sarif_file: tfsec.sarif
-
-      # - name: Upload SARIF file
-      #   uses: github/codeql-action/upload-sarif@v2
+      # - name: Run tfsec
+      #   uses: aquasecurity/tfsec-sarif-action@9a83b5c3524f825c020e356335855741fd02745f
       #   with:
-      #     # Path to SARIF file relative to the root of the repository
       #     sarif_file: tfsec.sarif
 
-      - name: Upload SARIF Report
-        uses: actions/upload-artifact@v2
-        with:
-          name: tfsec-results
-          path: tfsec.sarif
+      # # - name: Upload SARIF file
+      # #   uses: github/codeql-action/upload-sarif@v2
+      # #   with:
+      # #     # Path to SARIF file relative to the root of the repository
+      # #     sarif_file: tfsec.sarif
+
+      # - name: Upload SARIF Report
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: tfsec-results
+      #     path: tfsec.sarif
