--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -27,14 +27,14 @@ jobs:
         uses: actions/checkout@v3
       - name: Run Tfsec
         uses: aquasecurity/tfsec-action@v1.0.0
+
+
+
+      - name: Scan with tfsec
+        uses: aquasecurity/tfsec-sarif-action@9a83b5c3524f825c020e356335855741fd02745f
         with:
           sarif_file: tfsec.sarif
-
-
-      # - name: Run tfsec
-      #   uses: aquasecurity/tfsec-sarif-action@9a83b5c3524f825c020e356335855741fd02745f
-      #   with:
-      #     sarif_file: tfsec.sarif
+          if: always()
 
       # # - name: Upload SARIF file
       # #   uses: github/codeql-action/upload-sarif@v2
@@ -47,3 +47,4 @@ jobs:
         with:
           name: tfsec-results
           path: tfsec.sarif
+          if: always()
