--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,15 +5,29 @@ on:
   # push:
   #   # branches:
   #   #   - 'main'
-  workflow_dispatch:
-    inputs:
-      # Terraform action you want to perform
-      action:
-        description: 'Terraform Action to Perform'
-        type: choice
-        options:
-        - terraform-apply
-        - terraform-destroy
+  # workflow_dispatch:
+  #   inputs:
+  #     # Terraform action you want to perform
+  #     action:
+  #       description: 'Terraform Action to Perform'
+  #       type: choice
+  #       options:
+  #       - terraform-apply
+  #       - terraform-destroy
+    workflow_dispatch:
+      inputs:
+        action:
+          description: 'Terraform Action to Perform'
+          type: choice
+          options:
+          - terraform-apply
+          - terraform-destroy
+    workflow_run:
+      types:
+        - completed
+      workflows:
+        - tfsec.yml
+    
 
   
 env:
