--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -27,6 +27,9 @@ jobs:
         uses: actions/checkout@v3
       - name: Run Tfsec
         uses: aquasecurity/tfsec-action@v1.0.0
+      - name: Set TFSEC_STATUS
+        run: echo "TFSEC_STATUS=success" >> $GITHUB_ENV
+        if: success()
 
 
 
