--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,6 +35,13 @@ env:
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
 jobs:
+  tfsec-check:
+    name: tfsec-check
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check TFSEC_STATUS
+        run: echo "TFSEC_STATUS=${{ env.TFSEC_STATUS }}" 
+        
   terraform-apply:
     name: terraform-apply
     if: ${{ github.event.inputs.action == 'terraform-apply' }}
