--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -78,7 +78,7 @@ jobs:
     name: terraform-destroy
     # if: ${{ github.event.inputs.action == 'terraform-destroy' }}
     # runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.inputs.action == 'terraform-apply' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.inputs.action == 'terraform-destroy' }}
     runs-on: ubuntu-latest
     
     steps:
