--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -48,10 +48,13 @@ jobs:
       - name: Clone repo
         uses: actions/checkout@v3
 
-      - name: Run tfsec
+      - name: Run Tfsec
+        uses: aquasecurity/tfsec-action@v1.0.0
+      - name: Scan with tfsec
         uses: aquasecurity/tfsec-sarif-action@9a83b5c3524f825c020e356335855741fd02745f
         with:
           sarif_file: tfsec.sarif
+        if: always()
 
       - name: Upload SARIF Report
         uses: actions/upload-artifact@v2
