--- a/.github/workflows/mail.yml
+++ b/.github/workflows/mail.yml
@@ -2,7 +2,7 @@ name: Send SARIF Report Email
 
 on:
   push:
-    branches: [ main ]
+    branches: [ feature ]
   workflow_dispatch:
 
 env:
@@ -24,10 +24,6 @@ jobs:
 
       - name: Run Tfsec
         uses: aquasecurity/tfsec-action@v1.0.0
-
-      - name: Set TFSEC_STATUS
-        run: echo "TFSEC_STATUS=success" >> $GITHUB_ENV
-        if: success()
 
       - name: Scan with tfsec
         uses: aquasecurity/tfsec-sarif-action@9a83b5c3524f825c020e356335855741fd02745f
@@ -69,3 +65,4 @@ jobs:
           subject: SARIF Report for tfsec scanning
           body: Please find the SARIF report attached.
           attachments: sarif-report/tfsec.sarif
+          
